<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/aboutHeading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Rendezvous logo"
        android:src="@drawable/logo" />

   <View
        android:layout_width="fill_parent"
        android:layout_height="20dp">
    </View>

    <TextView
        android:id="@+id/concept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/concept"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

       <View
        android:layout_width="fill_parent"
        android:layout_height="20dp">
    </View>
    <TextView
        android:id="@+id/androidDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/androidDev"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

       <View
        android:layout_width="fill_parent"
        android:layout_height="20dp">
    </View>

    <TextView
        android:id="@+id/iosDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/iosDev"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

           <View
        android:layout_width="fill_parent"
        android:layout_height="20dp">
    </View>

     <TextView
         android:id="@+id/servers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/serverBy"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#FFFFFF" />

</LinearLayout>