<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share_actionbar" />

<TextView
    android:id="@+id/forename_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forename" />

<EditText
    android:id="@+id/forename"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/surname_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/surname" />

<EditText
    android:id="@+id/surname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName" />

<Button
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="shareLocation"
    android:text="@string/share_now" />

<TextView
    android:id="@+id/pinDisplay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="Large Text"
    android:textAppearance="?android:attr/textAppearanceLarge"
     />

</LinearLayout>